--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Up Game - Game Store</title>
+    <title>Walz Shop - Top Up Game Murah dan Cepat</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,57 +12,22 @@
     <div class="container">
         <header class="header">
             <a href="index.html" class="logo-link">
-                <img src="images/logo.png" alt="Game Store Logo" class="logo">
+                <img src="images/logo.png" alt="Walz Shop Logo" class="logo">
             </a>
         </header>
 
         <section class="promo-slider">
             <div class="slider-container">
-                <div class="slider">
-                    <div class="slider__item" style="background-image: url('images/banner1.png');"></div>
-                    <div class="slider__item" style="background-image: url('images/banner2.png');"></div>
-                    <div class="slider__item" style="background-image: url('images/banner3.png');"></div>
-                </div>
-                <div class="slider-dots"></div>
+                <div id="promo-slider" class="slider">
+                    </div>
+                <div id="slider-dots" class="slider-dots"></div>
             </div>
         </section>
 
         <section class="grid-section game-list-section">
             <h2 class="grid-title">Pilih Game</h2>
-            <div class="game-grid">
-                <a href="game.html" class="game-card">
-                    <img src="images/ml.png" alt="Mobile Legends">
-                    <span class="game-name">Mobile Legends</span>
-                </a>
-                <a href="game.html" class="game-card">
-                    <img src="images/ff.png" alt="Free Fire">
-                    <span class="game-name">Free Fire</span>
-                </a>
-                <a href="game.html" class="game-card">
-                    <img src="images/pubg.png" alt="PUBG Mobile">
-                    <span class="game-name">PUBG Mobile</span>
-                </a>
-                <a href="game.html" class="game-card">
-                    <img src="images/valorant.png" alt="Valorant">
-                    <span class="game-name">Valorant</span>
-                </a>
-                <a href="game.html" class="game-card">
-                    <img src="images/genshin.png" alt="Genshin Impact">
-                    <span class="game-name">Genshin Impact</span>
-                </a>
-                <a href="game.html" class="game-card">
-                    <img src="images/hago.png" alt="HAGO">
-                    <span class="game-name">HAGO</span>
-                </a>
-                <a href="game.html" class="game-card">
-                    <img src="images/apex.png" alt="Apex Legends">
-                    <span class="game-name">Apex Legends</span>
-                </a>
-                <a href="game.html" class="game-card">
-                    <img src="images/cod.png" alt="Call of Duty Mobile">
-                    <span class="game-name">COD Mobile</span>
-                </a>
-            </div>
+            <div id="games-grid" class="game-grid">
+                </div>
         </section>
     </div>
 
@@ -77,9 +42,9 @@
                 <li><a href="#">Tentang Kami</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Kebijakan Privasi</a></li>
-                <li><a href="#">Syarat dan Ketentuan</a></li>
+                <li><a href="#">Syarat & Ketentuan</a></li>
             </ul>
-            <p>&copy; 2024 Game Store. All Rights Reserved.</p>
+            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
         </div>
     </footer>
 
