--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header class="header">
             <a href="index.html" class="logo-link">
-                <img src="images/logo.png" alt="Walz Shop Logo" class="logo">
+                <img src="https://files.catbox.moe/dpr6d2.jpg" alt="Walz Shop Logo" class="logo">
             </a>
         </header>
 
