--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
         <header class="header">
             <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
             <a href="index.html" class="logo-link">
-                <img src="images/logo.png" alt="Walz Shop Logo" class="logo">
+                <img src="https://files.catbox.moe/dpr6d2.jpg" alt="Walz Shop Logo" class="logo">
             </a>
         </header>
 
