--- a/index.html
+++ b/index.html
@@ -1,53 +1,51 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Game Murah dan Cepat</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Walz Shop - Top Up Game Murah dan Cepat</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <a href="index.html" class="logo-link">
-                <img src="https://files.catbox.moe/dpr6d2.jpg" alt="Walz Shop Logo" class="logo">
-            </a>
-        </header>
+  <div class="container">
+    <header class="header">
+      <a href="index.html" class="logo-link">
+        <img src="https://files.catbox.moe/dpr6d2.jpg" alt="Walz Shop Logo" class="logo">
+      </a>
+    </header>
 
-        <section class="promo-slider">
-            <div class="slider-container">
-                <div id="promo-slider" class="slider">
-                    </div>
-                <div id="slider-dots" class="slider-dots"></div>
-            </div>
-        </section>
+    <section class="promo-slider">
+      <div class="slider-container">
+        <div id="promo-slider" class="slider"></div>
+        <div id="slider-dots" class="slider-dots"></div>
+      </div>
+    </section>
 
-        <section class="grid-section game-list-section">
-            <h2 class="grid-title">Pilih Game</h2>
-            <div id="games-grid" class="game-grid">
-                </div>
-        </section>
+    <section class="grid-section game-list-section">
+      <h2 class="grid-title">Pilih Game</h2>
+      <div id="games-grid" class="game-grid"></div>
+    </section>
+  </div>
+
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+      <ul class="footer-links">
+        <li><a href="#">Tentang Kami</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Kebijakan Privasi</a></li>
+        <li><a href="#">Syarat & Ketentuan</a></li>
+      </ul>
+      <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
     </div>
+  </footer>
 
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-            <ul class="footer-links">
-                <li><a href="#">Tentang Kami</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Kebijakan Privasi</a></li>
-                <li><a href="#">Syarat & Ketentuan</a></li>
-            </ul>
-            <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
